# extropian-app

./: CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  run.sh  test.sh
assets/: app_shell.rml
assets/panels/: console.rml  curve_editor.rml  property_editor.rml  solver_config.rml  tree_view.rml  viewport_3d.rml
assets/theme/: _default.rcss
include/exd/app/: app.hpp  application.hpp  audio.hpp  camera_controller.hpp  command.hpp  event_state.hpp  input_mode.hpp  mode.hpp  system_graph.hpp  ui_host.hpp  window.hpp  window_state.hpp
include/exd/app/services/: clipboard_service.hpp  file_dialog_service.hpp  notification_service.hpp
include/ext/app/: app.hpp  application.hpp  command.hpp  mode.hpp  system_graph.hpp  ui_host.hpp
src/: application.cpp  asset_watcher.cpp  audio.cpp  camera_controller_system.cpp  command.cpp  event_state.cpp  input_router.cpp  layout.cpp  mode.cpp  profile.cpp  project.cpp  system_graph.cpp  window.cpp
src/rmlui/: data_binding.cpp  host.cpp  host.hpp  render_interface.cpp  render_interface.hpp  system_interface.cpp  system_interface.hpp  ui_host_factory.cpp
src/rmlui/components/: color_picker.cpp  console.cpp  curve_editor.cpp  file_browser.cpp  property_editor.cpp  tree_view.cpp  viewport_3d.cpp
src/services/: clipboard_service.cpp  file_dialog_service.cpp  log_service.cpp  notification_service.cpp
tests/: test_application.cpp  test_audio.cpp  test_event_state.cpp  test_services.cpp  test_umbrella.cpp  test_window.cpp  test_window_state.cpp
